fix(graph): select field instead of action btn and 15 days alignment

--- a/src/app/components/graphs/graphs.component.scss
+++ b/src/app/components/graphs/graphs.component.scss
@@ -1,7 +1,7 @@
 .graphId1 {
   //overflow: scroll;
   widows: 100%;
-  padding-top: 3rem;
+  // padding-top: 3rem;
 }
 .graphId2 {
   //overflow: scroll;
@@ -9,13 +9,6 @@
   //padding-top: 1rem;
 }
 
-// .margin-1rem {
-//   margin: 1rem;
-// }
-
-// .headerBtn{
-//     color: ;
-// }
 
 .example-form {
   min-width: 150px;
@@ -38,10 +31,7 @@
 .margin-top-10px {
   margin-top: 14px;
 }
-// .graph{
-//   // overflow: scroll;
 
-// }
 .actionBtn {
   position: absolute;
   right: 20px;
@@ -56,9 +46,7 @@
     }
 }
 .btn {
-  //width: 100%;
-  height: 2rem;
-  text-align: left;
+  height: 3rem;
 }
 
 .textCenter {
@@ -77,3 +65,6 @@ mat-spinner {
   font-size: 12px;
 }
 
+.spaceBetween{
+  justify-content:space-between
+}
